--- a/package.json
+++ b/package.json
@@ -3,8 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.1.27",
+    "apollo-link-context": "^1.0.12",
+    "gql": "^1.1.2",
+    "graphql": "^14.1.1",
+    "graphql-yoga": "^1.17.0",
+    "prisma": "^1.24.0",
+    "prisma-client-lib": "^1.24.0",
     "react": "^16.7.0",
+    "react-apollo": "^2.3.3",
     "react-dom": "^16.7.0",
+    "react-icons": "^3.3.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3"
   },
   "scripts": {
