--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "dependencies": {
     "apollo-boost": "^0.1.27",
     "apollo-link-context": "^1.0.12",
+    "bcryptjs": "^2.4.3",
     "gql": "^1.1.2",
     "graphql": "^14.1.1",
+    "graphql-import": "^0.7.1",
     "graphql-yoga": "^1.17.0",
+    "jsonwebtoken": "^8.4.0",
     "prisma": "^1.24.0",
     "prisma-client-lib": "^1.24.0",
     "react": "^16.7.0",
     "react-apollo": "^2.3.3",
     "react-dom": "^16.7.0",
     "react-icons": "^3.3.0",
+    "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3"
   },
